# hermes-agent

./: AGENTS.md  model_tools.py  package-lock.json  pyproject.toml  run_agent.py
apps/sigil/: .gitignore  README.md  pyproject.toml
apps/sigil/docs/: ARCHITECTURE.md  FINANCIAL_INTELLIGENCE_FOUNDATION.md  GOVERNED_ALPACA_MARKET_DATA_ADAPTER.md  GOVERNED_BROKERAGE_PORTFOLIO_STATE.md  GOVERNED_DURABLE_EXECUTION_JOURNAL.md  GOVERNED_EXTERNAL_FINANCIAL_DATA_PROVIDERS.md  GOVERNED_FINANCIAL_DOCUMENT_INGESTION.md  GOVERNED_FINANCIAL_EVIDENCE_EXTRACTION.md  GOVERNED_FINANCIAL_EVIDENCE_REPOSITORY.md  GOVERNED_INVESTMENT_THESIS_ENGINE.md  GOVERNED_PORTFOLIO_LEDGER_ACCOUNTING.md  GOVERNED_PORTFOLIO_RISK_ENGINE.md  GOVERNED_PUBLIC_EQUITY_TRADING_EXECUTION.md  GOVERNED_RESEARCH_DOSSIER_ENGINE.md  GOVERNED_TITAN_FINBERT_ADAPTER.md  GOVERNED_TITAN_FINBERT_TASK_EXECUTOR.md  HERMES_LINK_FINBERT_TRANSPORT.md  SERVICE_CONTRACT.md
apps/sigil/tests/: test_financial_document_ingestion.py  test_financial_evidence_extraction.py  test_financial_evidence_repository.py  test_financial_intelligence.py  test_governed_alpaca_market_data_adapter.py  test_governed_brokerage_portfolio_state.py  test_governed_durable_execution_journal.py  test_governed_external_financial_data_providers.py  test_governed_investment_thesis_engine.py  test_governed_portfolio_ledger_accounting.py  test_governed_portfolio_risk_engine.py  test_governed_public_equity_trading_execution.py  test_governed_research_dossier_engine.py  test_hermes_link_finbert_transport.py  test_research_company.py  test_titan_finbert_adapter.py  (+1 more)
(+336 files in other folders)
